Restored to '06737c5525b4f39e8454235fdcb5aae6a05f65a7'
Replit-Restored-To: 06737c5525b4f39e8454235fdcb5aae6a05f65a7

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-
-SUPABASE_HOST=your-project.supabase.co
-SUPABASE_DATABASE=postgres
-SUPABASE_USER=postgres
-SUPABASE_PASSWORD=your-password
+# Supabase PostgreSQL Connection Parameters
+DATABASE_URL=postgresql://postgres:Yunus.2002@db.jnyxsuosikivbywxjzvr.supabase.co:5432/postgres
