--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "repl-nix-workspace"
 version = "0.1.0"
-description = "Add your description here"
+description = "Wscad BOM izleme"
 requires-python = ">=3.11"
 dependencies = [
     "numpy>=2.2.5",
